More files to add
Front End stuff

--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
                 <li><a href = "quizzes.html">Quizzes</a></li>
                 <li><a href = "help.html">Help</a></li>
             </ol>
+        </nav>
 
         <h1> About us</h1>
         <p> This is our creation for the final project of INST377.
@@ -26,7 +27,9 @@
         <h2> Developers</h2>
         <ul> 
             <li> Eric Nguyen</li>
-            <p> Hello! I am Eric Nguyen, a student at UMD. It was fun making htmls in this class!</p>
+            <p> Hello! I am Eric Nguyen, a student at UMD. It was fun making 
+                htmls in this class! Feel free to contact me at 
+                <a href="mailto:enguye14@terpmail.umd.edu">enguye14@terpmail.umd.edu</a></p>
             <li> Tamiya Phillips</li>
             <p> blurb pending</p>
         </ul>
