--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
         <h1> About us</h1>
         <p> This is our creation for the final project of INST377.
             The idea was that this website would have quizzes that would help
-            someone decide what they wanted to do. Like, what they wanted to eat
-            or make for dinner
+            someone decide what they wanted to do. Fro example, what would they wanted 
+            to eat or make for dinner? Or, What should they do for fun?
             please let us know that you liked it or not! It was made using 
             <a href="https://quizapi.io/" target="_blank">QuizAPI.io!</a> 
             
