--- a/quiz-1.html
+++ b/quiz-1.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Quizzels!</title>
+        <title> Quiz-1</title>
         <link rel="stylesheet" href="Quizzes.css">
     </head>
-
+    
     <body>
         <nav>
             <ol class = "nav-list">
@@ -12,15 +12,7 @@
                 <li><a href = "help.html">Help</a></li>
             </ol>
         </nav>
-        <h1> Quizzels</h1>
-        <p> Welcome to our site, where we ask questions, and you get answers</p>
-        <div class = "button-container">
-            <button class = "button-1" onclick = "location.href = 'quizzes.html'">
-                Click here to start
-            </button>
-        </div>
-
-
+        <h1> What should I cook?</h1>
+        
     </body>
-
 </html>
