--- a/quizzes.html
+++ b/quizzes.html
@@ -12,6 +12,48 @@
                 <li><a href = "home_page.html">Home</a></li>
             </ol>
         </nav>
+        <h1> Please select a quiz!</h1>
+
+        <div class="quiz-list">
+
+            <div class = "quiz">
+                <h2> What should I cook?</h2>
+                    <p class="description">
+                        Feeling hungry? Why not make something?
+                        If not, might we suggest a place to go?
+
+                    </p>
+                <div class = "quiz-container">
+                    <a href="quiz-1.html" class="arrow-right"></a>
+                </div>
+
+            </div>
+            
+            <div class = "quiz">
+                <h2> What should I do?</h2>
+                    <p class="description">
+                        Bored? We can think of something to do 
+                        for you!
+                    </p>
+               <div class = "quiz-container">
+                    <a href="quiz-2.html" class="arrow-right"></a>
+                </div>
+            </div>
+
+            <div class = "quiz">
+                <h2> What should I watch?</h2>
+                    <p class="description">
+                        Itching to watch something? Don't know what 
+                        type of movie you want to watch? We got you!
+                    </p>
+               <div class = "quiz-container">
+                    <a href="quiz-3.html" class="arrow-right"></a>
+                </div>
+            </div>
+            
+        </div>
 
     </body>
 </html>
+
+
