--- a/quiz-1.html
+++ b/quiz-1.html
@@ -72,3 +72,10 @@ form.addEventListener('submit', async (e) => {
     });
 });
 </script>
+
+<script>
+fetch('/api/scores')
+    .then(res => res.json())
+    .then(data => console.log('Saved results:', data));
+</script>
+
