--- a/help.html
+++ b/help.html
@@ -21,7 +21,7 @@
         <h2> Not sure how to take a quiz?</h2>
         <p>Here are the instructions on taking a quiz</p>
         <ol class = "help">
-            <li>Step 1: Select a quiz</li>
+            <li>Step 1: Select a quiz by clicking on the arrow</li>
             <li>Step 2: Read the question and look thoroughly</li>
             <li>Step 3: Select the option that best suits you. </li>
             <li>Step 4: Answer until completion</li>
