--- a/home_page.html
+++ b/home_page.html
@@ -12,14 +12,15 @@
                 <li><a href = "help.html">Help</a></li>
             </ol>
         </nav>
-        <h1> Quizzels</h1>
-        <p> Welcome to our site, where we ask questions, and you get answers</p>
-        <div class = "button-container">
-            <button class = "button-1" onclick = "location.href = 'quizzes.html'">
-                Click here to start
-            </button>
-        </div>
-
+        <main class="home">
+            <h1> Quizzels</h1>
+            <p> Welcome to our site, where we ask questions, and you get answers</p>
+            <div class = "button-container">
+                <button class = "button-1" onclick = "location.href = 'quizzes.html'">
+                    Click here to start
+                </button>
+            </div>
+        </main>
 
     </body>
 
