--- a/quizzes.html
+++ b/quizzes.html
@@ -9,7 +9,7 @@
             <ol class = "nav-list">
                 <li><a href = "help.html">Help</a></li>
                 <li><a href = "about.html">About Us</a></li>
-                <li><a href = "home_page.html">Home</a></li>
+                <li><a href = "index.html">Home</a></li>
             </ol>
         </nav>
         <h1> Please select a quiz!</h1>
