--- a/help.html
+++ b/help.html
@@ -9,7 +9,7 @@
             <ol class = "nav-list">
                 <li><a href = "quizzes.html">Quizzes</a></li>
                 <li><a href = "about.html">About Us</a></li>
-                <li><a href = "home_page.html">Home</a></li>
+                <li><a href = "index.html">Home</a></li>
             </ol>
         </nav>
         <h1> Help</h1>
@@ -34,3 +34,4 @@
 
 
 </html>
+
