--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                 htmls in this class! Feel free to contact me at 
                 <a href="mailto:enguye14@terpmail.umd.edu">enguye14@terpmail.umd.edu</a></p>
             <li> Tamiya Phillips</li>
-            <p> blurb pending</p>
+            <p> Hello! I am Tamiya Phillips and I love to learn about technology. This class has taught me lots about web applications and building!</p>
         </ul>
     </body>
 </html>
